[package]
name = "sql_paginatorr"
version = "0.1.0"
edition = "2021"
authors = ["Austin John Mayer <tronicboy1>"]
repository = "https://github.com/tronicboy1"
license = "MIT"
keywords = ["offset", "sql", "limit"]
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
