[package]
name = "sql_paginatorr"
description = "A simple utility for calculating offset and limits for SQL Queries"
version = "0.1.2"
edition = "2021"
authors = ["Austin John Mayer <tronicboy1>"]
repository = "https://github.com/tronicboy1/sql_paginatorr"
license = "MIT"
keywords = ["offset", "sql", "limit"]
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
